--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,9 @@ envlist = py{27,33,34,35}-dj{18,19,110}, flake8
 max-line-length = 120
 
 [testenv]
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}
+
 commands =
    django-admin collectstatic --noinput --settings=tests.testapp.settings
    gunicorn tests.testapp.wsgi -b :8000 -D
@@ -28,6 +31,7 @@ deps =
     dj18: Django>=1.8.1,<1.9
     dj19: Django>=1.9,<1.10
     dj110: Django>=1.10,<1.11
+
 [testenv:flake8]
 basepython = python3.4
 deps = flake8==3.0.4
