Fix CI and tests
If someone adds migrations, Wagtail in this case, the tests failed.
So "migrate" process have been add to fix this.

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ setenv =
 
 commands =
    django-admin collectstatic --noinput --settings=tests.testapp.settings
+   django-admin migrate --settings=tests.testapp.settings
    gunicorn tests.testapp.wsgi -b :8000 -D
    pytest --splinter-webdriver=remote --splinter-remote-url=http://localhost:4444/wd/hub --site-url=http://172.17.0.1:8000
 
