Fix selenium and selenium-docker versions to fix CI

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ setenv =
 
 commands =
    django-admin collectstatic --noinput --settings=tests.testapp.settings
-   django-admin migrate --settings=tests.testapp.settings
+   django-admin migrate --noinput --settings=tests.testapp.settings
    gunicorn tests.testapp.wsgi -b :8000 -D
    pytest --splinter-webdriver=remote --splinter-remote-url=http://localhost:4444/wd/hub --site-url=http://172.17.0.1:8000
 
@@ -21,10 +21,10 @@ basepython =
     py35: python3.5
 
 deps =
+    selenium==3.3
     pytest==3.0.3
     pytest-splinter==1.7.6
     django-compressor>=1.6
-    wagtail>=1.0,<2.0
     django-el-pagination>=2.1.1
     tapioca-disqus==0.1.2
     gunicorn==19.6.0
