--- a/tests/testapp/docker-compose.yaml
+++ b/tests/testapp/docker-compose.yaml
@@ -1,11 +1,10 @@
 hub:
-  image: selenium/hub
+  image: selenium/hub:3.2.0
   ports:
     - "4444:4444"
 firefox:
-  image: selenium/node-firefox
+  image: selenium/node-firefox:3.2.0
   links:
     - hub
   expose:
     - "5555"
-
