--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,33,34,35}-dj{18,19,110}, flake8
+envlist = py{27,34,35,36}-dj{18,19,110,111}, flake8
 
 [flake8]
 max-line-length = 120
@@ -16,9 +16,9 @@ commands =
 
 basepython =
     py27: python2.7
-    py33: python3.3
     py34: python3.4
     py35: python3.5
+    py36: python3.6
 
 deps =
     selenium==3.3
@@ -32,8 +32,9 @@ deps =
     dj18: Django>=1.8.1,<1.9
     dj19: Django>=1.9,<1.10
     dj110: Django>=1.10,<1.11
+    dj111: Django>=1.11,<1.12
 
 [testenv:flake8]
-basepython = python3.4
+basepython = python3.5
 deps = flake8==3.0.4
 commands = flake8 puput tests --exclude=migrations
