Fix splinter version in tox.ini file

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ basepython =
 
 deps =
     selenium==3.3
+    splinter==0.7.5
     pytest==3.0.3
     pytest-splinter==1.7.6
     django-compressor>=1.6
