update requirements in setup.py and tox.ini (#169)

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,9 @@ deps =
     splinter==0.7.5
     pytest==3.0.3
     pytest-splinter==1.7.6
-    django-el-pagination>=2.1.1
+    django-el-pagination>=3.2.1
+    django-social-share>=1.1.2
+    django-colorful>=1.2
     tapioca-disqus==0.1.2
     gunicorn==19.6.0
 
