--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{34,35,36}-dj{111,20}, flake8
+envlist = py{34,35,36}-dj{20,21}, flake8
 
 [flake8]
 max-line-length = 120
@@ -24,14 +24,14 @@ deps =
     splinter==0.7.5
     pytest==3.0.3
     pytest-splinter==1.7.6
-    django-el-pagination>=3.2.1
-    django-social-share>=1.1.2
-    django-colorful>=1.2
+    django-el-pagination>=3.2.4
+    django-social-share>=1.3.0
+    django-colorful>=1.3
     tapioca-disqus==0.1.2
     gunicorn==19.6.0
 
-    dj111: Django>=1.11,<1.12
-    dj20: Django>=2.0,<2.1
+    dj20: Django==2.0.9
+    dj21: Django>=2.1
 
 [testenv:flake8]
 basepython = python3.5
