--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{34,35,36}-dj{20,21}, flake8
+envlist = py{35,36}-dj{20,21,22}, flake8
 
 [flake8]
 max-line-length = 120
@@ -15,7 +15,6 @@ commands =
    pytest --splinter-webdriver=remote --splinter-remote-url=http://localhost:4444/wd/hub --site-url=http://172.17.0.1:8000
 
 basepython =
-    py34: python3.4
     py35: python3.5
     py36: python3.6
 
@@ -32,6 +31,7 @@ deps =
 
     dj20: Django==2.0.9
     dj21: Django>=2.1
+    dj22: Django>=2.2,<3.0
 
 [testenv:flake8]
 basepython = python3.5
