--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{35,36}-dj{20,21,22}, flake8
+envlist = py{35,36,37,38}-dj{20,21,22}, flake8
 
 [flake8]
 max-line-length = 120
@@ -17,6 +17,8 @@ commands =
 basepython =
     py35: python3.5
     py36: python3.6
+    py37: python3.7
+    py38: python3.8
 
 deps =
     selenium==3.3
@@ -34,6 +36,6 @@ deps =
     dj22: Django>=2.2,<3.0
 
 [testenv:flake8]
-basepython = python3.5
+basepython = python3.7
 deps = flake8==3.0.4
 commands = flake8 puput tests --exclude=migrations
