--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{35,36,37,38}-dj{20,21,22}, flake8
+envlist = py{36,37,38}-dj{20,21,22,30}, flake8
 
 [flake8]
 max-line-length = 120
@@ -15,7 +15,6 @@ commands =
    pytest --splinter-webdriver=remote --splinter-remote-url=http://localhost:4444/wd/hub --site-url=http://172.17.0.1:8000
 
 basepython =
-    py35: python3.5
     py36: python3.6
     py37: python3.7
     py38: python3.8
@@ -34,6 +33,7 @@ deps =
     dj20: Django==2.0.9
     dj21: Django>=2.1
     dj22: Django>=2.2,<3.0
+    dj30: Django>=3.0,<3.1
 
 [testenv:flake8]
 basepython = python3.7
