fixing tox.ini and setup.py (#224)

--- a/tox.ini
+++ b/tox.ini
@@ -30,8 +30,8 @@ deps =
     tapioca-disqus==0.1.2
     gunicorn==19.6.0
 
-    dj20: Django==2.0.9
-    dj21: Django>=2.1
+    dj20: Django>=2.0,<2.1
+    dj21: Django>=2.1,<2.2
     dj22: Django>=2.2,<3.0
     dj30: Django>=3.0,<3.1
 
