--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38}-dj{20,21,22,30}, flake8
+envlist = py{36,37,38,39}-dj{22,30,31}, flake8
 
 [flake8]
 max-line-length = 120
@@ -18,6 +18,7 @@ basepython =
     py36: python3.6
     py37: python3.7
     py38: python3.8
+    py39: python3.9
 
 deps =
     selenium==3.3
@@ -34,6 +35,7 @@ deps =
     dj21: Django>=2.1,<2.2
     dj22: Django>=2.2,<3.0
     dj30: Django>=3.0,<3.1
+    dj31: Django>=3.1,<3.2
 
 [testenv:flake8]
 basepython = python3.7
