--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,39}-dj{22,30,31}, flake8
+envlist = py{36,37,38,39}-dj{22,30,31,32}, flake8
 
 [flake8]
 max-line-length = 120
@@ -36,6 +36,7 @@ deps =
     dj22: Django>=2.2,<3.0
     dj30: Django>=3.0,<3.1
     dj31: Django>=3.1,<3.2
+    dj32: Django>=3.2,<3.3
 
 [testenv:flake8]
 basepython = python3.7
